corrected gaps, added active page border-bottom

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,7 +39,7 @@
   }
 
   .card {
-    @apply flex items-center gap-16 bg-gray-900 py-8 px-12 rounded-lg shadow-2xl;
+    @apply flex items-center gap-16 bg-gray-300 text-gray-500 py-8 px-12 rounded-lg shadow-2xl;
   }
 
   .team-card {
